avdevice/decklink: fix mingw portability

Fixes ticket #5669.

Signed-off-by: Marton Balint <cus@passwd.hu>